--- a/登录后首页.html
+++ b/登录后首页.html
@@ -52,7 +52,7 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u189" class="ax_default box_1">
+      <div id="u189" class="ax_default box_1 ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u189_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u190" class="text" style="display: none; visibility: hidden">
@@ -61,7 +61,7 @@
       </div>
 
       <!-- Unnamed (椭圆形) -->
-      <div id="u191" class="ax_default ellipse">
+      <div id="u191" class="ax_default ellipse ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u191_img" class="img " src="images/登录后首页/u191.png"/>
         <!-- Unnamed () -->
         <div id="u192" class="text" style="display: none; visibility: hidden">
@@ -70,7 +70,7 @@
       </div>
 
       <!-- Unnamed (Pie Chart) -->
-      <div id="u193" class="ax_default ellipse">
+      <div id="u193" class="ax_default ellipse ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u193_img" class="img " src="images/登录后首页/u193.png"/>
         <!-- Unnamed () -->
         <div id="u194" class="text" style="display: none; visibility: hidden">
@@ -79,7 +79,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u195" class="ax_default label">
+      <div id="u195" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u195_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u196" class="text" style="visibility: visible;">
@@ -88,7 +88,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u197" class="ax_default label">
+      <div id="u197" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u197_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u198" class="text" style="visibility: visible;">
@@ -97,7 +97,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u199" class="ax_default _文本段落">
+      <div id="u199" class="ax_default _文本段落 ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u199_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u200" class="text" style="visibility: visible;">
@@ -106,7 +106,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u201" class="ax_default label">
+      <div id="u201" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u201_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u202" class="text" style="visibility: visible;">
@@ -115,7 +115,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u203" class="ax_default label">
+      <div id="u203" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u203_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u204" class="text" style="visibility: visible;">
@@ -124,7 +124,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u205" class="ax_default label">
+      <div id="u205" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u205_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u206" class="text" style="visibility: visible;">
@@ -133,7 +133,7 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u207" class="ax_default line">
+      <div id="u207" class="ax_default line ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u207_img" class="img " src="images/登录后首页/u207.png"/>
         <!-- Unnamed () -->
         <div id="u208" class="text" style="display: none; visibility: hidden">
@@ -142,7 +142,7 @@
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u209" class="ax_default line">
+      <div id="u209" class="ax_default line ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u209_img" class="img " src="images/登录后首页/u209.png"/>
         <!-- Unnamed () -->
         <div id="u210" class="text" style="display: none; visibility: hidden">
@@ -151,7 +151,7 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u211" class="ax_default line">
+      <div id="u211" class="ax_default line ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u211_img" class="img " src="images/登录后首页/u211.png"/>
         <!-- Unnamed () -->
         <div id="u212" class="text" style="display: none; visibility: hidden">
@@ -160,7 +160,7 @@
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u213" class="ax_default line">
+      <div id="u213" class="ax_default line ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u213_img" class="img " src="images/登录后首页/u213.png"/>
         <!-- Unnamed () -->
         <div id="u214" class="text" style="display: none; visibility: hidden">
@@ -169,7 +169,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u215" class="ax_default label">
+      <div id="u215" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u215_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u216" class="text" style="visibility: visible;">
@@ -178,7 +178,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u217" class="ax_default label">
+      <div id="u217" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u217_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u218" class="text" style="visibility: visible;">
@@ -187,7 +187,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u219" class="ax_default label">
+      <div id="u219" class="ax_default label ax_default_hidden" style="display: none; visibility: hidden">
         <div id="u219_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u220" class="text" style="visibility: visible;">
@@ -196,7 +196,7 @@
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u221" class="ax_default _图片">
+      <div id="u221" class="ax_default _图片 ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u221_img" class="img " src="images/登录后首页/u221.png"/>
         <!-- Unnamed () -->
         <div id="u222" class="text" style="display: none; visibility: hidden">
@@ -2976,7 +2976,7 @@
       </div>
 
       <!-- Unnamed (文本段落) -->
-      <div id="u838" class="ax_default _文本段落">
+      <div id="u838" class="ax_default _文本段落 ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u838_img" class="img " src="images/登录后首页/u838.png"/>
         <!-- Unnamed () -->
         <div id="u839" class="text" style="visibility: visible;">
@@ -4174,7 +4174,7 @@
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u1106" class="ax_default _图片">
+      <div id="u1106" class="ax_default _图片 ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u1106_img" class="img " src="images/登录后首页/u850.png"/>
         <!-- Unnamed () -->
         <div id="u1107" class="text" style="display: none; visibility: hidden">
@@ -4579,7 +4579,7 @@
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u1197" class="ax_default _图片">
+      <div id="u1197" class="ax_default _图片 ax_default_hidden" style="display: none; visibility: hidden">
         <img id="u1197_img" class="img " src="images/登录后首页/u1197.png"/>
         <!-- Unnamed () -->
         <div id="u1198" class="text" style="display: none; visibility: hidden">
